functions code optimized

--- a/static/style.css
+++ b/static/style.css
@@ -33,7 +33,7 @@ footer {
 	color: white;
 	text-align: center;
 	height: 57px;
-	position: fixed;
+	position: relative;
 }
 
 .img {
@@ -43,7 +43,14 @@ footer {
 	background-color: lightgray;
 	margin-right: 30px;
 	margin-top: 3px;
+	border: 1px solid black;
+	
 }
+img.resize {
+	max-width:50%;
+	max-height:50%;
+  }
+  
 
 .title {
 	color: #082759;
@@ -169,4 +176,24 @@ footer {
 	background-color: rgb(0, 0, 0);
 	background-color: rgba(0, 0, 0, 0.4);
 }
-
+#loader {
+	border: 16px solid #f3f3f3;
+	border-radius: 50%;
+	border-top: 16px solid #3498db;
+	width: 120px;
+	height: 120px;
+	-webkit-animation: spin 2s linear infinite; /* Safari */
+	animation: spin 2s linear infinite;
+	margin-left: 500px;
+	display:block;
+	
+	  
+  } 
+  @-webkit-keyframes spin {
+	0% { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
+  }
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+  }
