shorthand code used

--- a/static/style.css
+++ b/static/style.css
@@ -40,7 +40,7 @@ footer {
 	width: 200px;
 	height: 200px;
 	float: left;
-	background-color: lightgray;
+	background-color: rgb(73, 61, 61);
 	margin-right: 30px;
 	margin-top: 3px;
 	border: 1px solid black;
